2012-09-06  Iain Buclaw  <ibuclaw@ubuntu.com>

	* lang.opt: Define Wcast-result.
	* d-codegen.cc(IRState::convertTo): Warn about null result, but only
	if -Wcast-result.
	(IRState::hwi2toli): Move to header.
	(IRState::realPart): Likewise.
	(IRState::imagPart): Likewise.
	(IRState::toElemLvalue): Clean-up tree args array.
	(IRState::doArraySet): New function.
	(IRState::arraySetExpr): New function.
	* d-glue.cc(EqualExp::toElem): Clean-up tree args array.
	(CatAssignExp::toElem): Likewise.
	(AssignExp::toElem): Likewise.
	(DeleteExp::toElem): Likewise.
	(NewExp::toElem): Use IRState::modify.
	(ArrayLiteralExp::toElem): Don't call ARRAYLITERALTX library function
	if assigning to static array.
	(StructLiteralExp::toElem): Use IRState::arraySetExpr.
	(do_array_set): Move to IRState::doArraySet.
	(array_set_expr): Move to IRState::arraySetExpr.

	* d-lang.h(D_TYPE_IMAGINARY_FLOAT): Define.
	(d_convert_basic): Remove.
	* d-builtins.c(d_init_builtins): Mark imaginary types as
	D_TYPE_IMAGINARY_FLOAT.
	* d-builtins2.cc(gcc_type_to_d_type): Use convert.
	* d-codegen.cc(IRState::emitLocalVar): Call pushdecl earlier so
	catches CONST_DECLs.
	(IRState::convertTo): Remove handling of conversions between
	imaginary/real, imaginary/complex, complex/imaginary types, use
	convert.
	(IRState::convertForArgument): Use convert.
	(IRState::arrayElemRef): Likewise.
	(IRState::call): Likewise.
	(IRState::libCall): Likewise.
	(IRState::maybeExpandSpecialCall): Likewise.
	* d-convert.cc(d_convert_basic): Mark static.
	(convert): Handle correct conversions between imaginary/real,
	imaginary/complex, complex/imaginary types.
	* d-glue.cc(InExp::toElem): Use convert.
	(BoolExp::toElem): Likewise.
	(FuncDeclaration::buildClosure): Likewise.

	* d-builtins.c(def_fn_type): Use build_varargs_function_type_array and
	build_function_type_array to create built-in functions.
	(d_init_builtins): Use lang_hooks.types.type_for_size.
	* d-builtins2.cc(d_gcc_magic_builtins_module): Use