@@ -61,7 +61,6 @@ enum LibCall
   LIBCALL_AALEN,
   LIBCALL_ADCMP,
   LIBCALL_ADCMP2,
-  LIBCALL_ADCMPCHAR,
   LIBCALL_ADDUPT,
   LIBCALL_ADEQ,
   LIBCALL_ADEQ2,
