@@ -1,5 +1,9 @@
 2012-09-06  Iain Buclaw  <ibuclaw@ubuntu.com>
 
+	* d-codegen.cc(libcall_ids): Remove _adCmpChar.
+	(IRState::getLibCallDecl): Remove LIBCALL_ADCMPCHAR.
+	* d-glue.cc(CmpExp::toElem): Don't call LIBCALL_ADCMPCHAR.
+
 	* lang.opt: Define Wcast-result.
 	* d-codegen.cc(IRState::convertTo): Warn about null result, but only
 	if -Wcast-result.
